2025-01-31  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.2-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2-alpha02: FireAid';git push
	git tag -a 5.3.2-alpha02 -m '';git push --tags

	* NCO 5.3.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2-alpha01: Hotel Van Zandt';git push
	git tag -a 5.3.2-alpha01 -m 'Functionally identical to 5.3.1 plus srun default and quantization with groups works again';git push --tags

	* Pass grp_out_id not nc_id to nco_qnt_mtd() so quantization metadata works on variables in non-root groups

2025-01-22  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap: Shift default node manager from mpirun to srun

	* nco.texi: Contrast NCO behavior with CF/NUG for type of _FillValue when packing (patch from lguez)

2025-01-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.1: Dark Sunset (Palisades Lost)';git push
	git tag -a 5.3.1 -m 'ncks: autoconversion in regridder/interpolator; ncremap: PS fix tm dmn, ERA5 t MERRA2 H, PM --npo';git push --tags

	* Document 5.3.1

2025-01-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha02: Poison Enchilada';git push
	git tag -a 5.3.1-alpha02 -m 'all: 2025; ncremap: PS fix tm dmn, ERA5 t MERRA2 H, PM --npo';git push --tags

	* Change Perlmutter --npo paths to /global/cfs/cdirs/e3sm/zender/[bin,lib]_perlmutter

2025-01-02  Charlie Zender  <zender@uci.edu>

	* Extrapolate variables named "H" with geopotential height algorithm

	* Verify MERRA2 prs->hyb interpolation works when time is fixed dimension

	* Extrapolate variables named "t" as temperature profiles (like ERA5) using global lapse rate method

	* Demonstrate prs->hyb interpolation for MERRA2 works correctly for multi-timestep datasets

2025-01-01  Charlie Zender  <zender@uci.edu>

	* Handle fixed time dimension in PS in pure pressure input (like MERRA2)
